# shellwire

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml  run.bat  run.sh  test.bat  test.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml
docs/: client_integration.md  daemon_guide.md  index.md  protocol_spec.md
src/kotha_shell/: __init__.py  __main__.py  auth.py  cli.py  client_manager.py  config.py  executor.py  protocol.py  server.py  session.py
src/shellwire/: __init__.py  __main__.py  auth.py  cli.py  client_manager.py  config.py  env_tracking.py  executor.py  memory_monitor.py  output.py  protocol.py  pty_bridge.py  server.py  session.py  shell_rewrite.py  shutdown_forensics.py
tests/: test_auth.py  test_client_manager.py  test_env_tracking.py  test_executor.py  test_output.py  test_server.py  test_session.py  test_shell_rewrite.py
website/: astro.config.mjs  index.html  metadata.json  package-lock.json  package.json
website/src/: index.css  vesper-light-theme.LICENSE.txt  vesper-light-theme.json  vesper-theme.json
website/src/components/: CodeSnippet.astro  CodeTabs.astro  CopyButton.astro  Footer.astro  InlineCode.astro  Mermaid.astro  ThemeToggle.astro
website/src/layouts/: DocLayout.astro  HomeLayout.astro  Layout.astro
website/src/pages/: index.mdx
website/src/pages/documentation/: _codeSnippets.js  client-integration.mdx  daemon-guide.mdx  overview.mdx  protocol-spec.mdx
