[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shellwire"
version = "0.1.0"
description = "A WebSocket daemon for remote shell execution and interactive terminal sessions"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "Shanto Islam", email = "shantoislamdev@gmail.com"},
]
maintainers = [
    {name = "@shantoislamdev"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Shells",
]
dependencies = [
    "websockets>=12.0",
    "click>=8.0",
    "ptyprocess>=0.7.0; sys_platform != 'win32'",
]

[project.urls]
Homepage = "https://github.com/shantoislamdev/shellwire"
Repository = "https://github.com/shantoislamdev/shellwire.git"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[project.scripts]
shellwire = "shellwire.cli:main"
sw = "shellwire.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
